✨ 메세지 전송 기능 Export API 추가

--- a/KakaoTalkPCViewCtrl/KakaoTalkPCViewCtrl.vcxproj
+++ b/KakaoTalkPCViewCtrl/KakaoTalkPCViewCtrl.vcxproj
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <TargetName>$(ProjectName)x64</TargetName>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -133,10 +136,12 @@
   <ItemGroup>
     <ClInclude Include="ActionCtrl.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ViewCtrl_API.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ActionCtrl.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="ViewCtrl_API.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
