--- a/KakaoTalkPCViewCtrl/KakaoTalkPCViewCtrl.vcxproj.filters
+++ b/KakaoTalkPCViewCtrl/KakaoTalkPCViewCtrl.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="ActionCtrl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ViewCtrl_API.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ActionCtrl.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ViewCtrl_API.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
